# CLI_Task_Timer

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: pre-commit-check.yaml  tests.yaml
src/: cli.rs  display.rs  main.rs  task.rs  tests.rs  workflows.rs
src/cli/: cli_tests.rs  mod.rs
src/display/: display_tests.rs  mod.rs
src/task/: mod.rs  task_tests.rs
tests/: delete_tests.rs  integration_tests.rs  rename_tests.rs  workflow_tests.rs
tests/common/: mod.rs
