[package]
name = "CLI_Task_Timer"
license = "MIT"
rust-version = "1.90"
edition = "2024"
repository = "https://github.com/shubhenduanupamdutta/ActixUdemy"
publish = false
authors = ["Shubhendu Dutta <shubhendu.d@turing.com>"]

[lints.rust]
nonstandard_style = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
# missing_copy_implementation = "deny"
unsafe_code = "deny"
# missing_docs = "deny"
non_ascii_idents = "deny"
deprecated = "deny"
deprecated_in_future = "deny"
unreachable_code = "deny"
unreachable_patterns = "deny"
unreachable_pub = "deny"
missing_debug_implementations = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_qualifications = "warn"
unused_import_braces = "warn"
unused_imports = "warn"

[lints.clippy]
all = "deny"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
incremental = true
opt-level = 3
strip = true
rpath = false
debug = false
debug-assertions = false
overflow-checks = false

[dependencies]
